# gmock_cmake_demo

./: CMakeLists.txt  README.md  build.sh  test.sh
docs/gmock/: CheatSheet_cn.docx  CookBook_cn.docx  ForDummies_cn.docx  FrequentlyAskedQuestions_cn.docx  KnownIssues_cn.docx
docs/gtest/: AdvancedGuide_cn.docx  faq_cn.docx  primer_cn.docx
flamegraph/: CMakeLists.txt  cpuflamegraph.cc
include/: derivedclass_test.h  fakefoo.h  foodemo.h  friend_test.h  header_replace_test.h  namespace_test.h  painter.h  proxy_header_replace_test.h  sample1.h  stack_interface.h  turtle.h
libturtle/: CMakeLists.txt  turtle.cc
main/: CMakeLists.txt  derivedclass_test.cc  friend_test.cc  header_replace_test.cc  jiaoshou.cc  main.cc  namespace_test.cc  sample1.cc  simple_section.cc  test.cc  test_sem.cc
test/: CMakeLists.txt
test/include/: mock_fakefoo.h  mock_foodemo.h  mock_stack_interface.h  mock_turtle.h
test/testsample/: CMakeLists.txt  sample1-t.cc  sample2-t.cc  sample3-t.cc  sample_death-t.cc  sample_fake-t.cc  sample_template-t.cc  testsample_main.cc
